# 2021-code-smells

after/: pyproject.toml
after/pos/: order.py  payment.py  system.py
project-1/after/: main.py  setup.cfg
project-1/after/pos/: order.py  payment.py
project-2/: Makefile  after.py  before.py  pyproject.toml
