[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["varunsinghal <varunsinghal15@gmail.com>"]
readme = "README.md"
packages = [{include = "project_2"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
